cryptsetup (2:1.0.4~rc2-2) unstable; urgency=low

  [ David Härdeman ]
  * Always update the current initramfs when a new version is installed

  [ Jonas Meurer ]
  * Fix SYNOPSIS in crypttab(5) manpage to show all arguments as mandatory.
    Thanks to Michael Steinfurth.
  * Check in postinst for entries with missing arguments in /etc/crypttab.
    Warn is one is found. Thanks to Michael Steinfurth (closes: #388083)
  * Fix pretest for encrypted swap. Allow unencrypted swap on the source
    device. Thanks to Dennis Furey. (closes: #387158)
  * Fix posttest for encrypted swap. Don't skip if a swap filesystem is found
    on the target device. Thanks to Sam Couter. (closes: #385317)

 -- Jonas Meurer <mejo@debian.org>  Wed, 20 Sep 2006 16:53:07 +0200

cryptsetup (2:1.0.4~rc2-1) unstable; urgency=low

  [ Jonas Meurer ]
  * Add some more german translations to de.po.
  * Add a note to NEWS.Debian where the fix for #376393 is explained. thanks
    to Robert Bihlmeyer for the report. (closes: #379719)
  * Allow swap filesystems to be overwritten when the swap flag is set. thanks
    to Raphaël Quinet for the report. (closes: #379771)
  * Update to upstream 1.0.4-rc2. (closes: #378422, #379726, closes: #379723)
  * removed patches 03-05, merged upstream.
  * [01_terminal_output.dpatch] updated for new upstream.
  * [02_docs_tries.dpatch] updated for new upstream, to fix luksDelKey
    documentation and to give more information about the keysize.
    (closes: #379084)

  [ David Härdeman ]
  * Make sure that README.initramfs is included in the package (closes
    #380048)
  * Replace panic calls in cryptsetup script with exit 1 to match the
    behaviour of other scripts. The regular initramfs script will panic
    later when root isn't detected anyway
  * Make all four fields in crypttab mandatory (closes: #370180,
    #376941)
  * Add UTF8 keyboard input support to initramfs image (closes: #379737)
  * Add a keyscript option (closes: #370302, #375913)